SDKs/twilio.com/twilio_messaging_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateAlphaSenderRequest, CreateAlphaSenderResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateAlphaSenderRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  pathParams: {
    serviceSid: "sit",
  },
  request: {
    alphaSender: "voluptas",
  },
};

sdk.createAlphaSender(req).then((res: CreateAlphaSenderResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createAlphaSender`
* `createBrandRegistrations`
* `createBrandVetting`
* `createExternalCampaign`
* `createPhoneNumber`
* `createService`
* `createShortCode`
* `createTollfreeVerification`
* `createUsAppToPerson`
* `deleteAlphaSender`
* `deleteDomainCertV4`
* `deletePhoneNumber`
* `deleteService`
* `deleteShortCode`
* `deleteUsAppToPerson`
* `fetchAlphaSender`
* `fetchBrandRegistrations`
* `fetchBrandVetting`
* `fetchDeactivation` - Fetch a list of all United States numbers that have been deactivated on a specific date.
* `fetchDomainCertV4`
* `fetchDomainConfig`
* `fetchPhoneNumber`
* `fetchService`
* `fetchShortCode`
* `fetchTollfreeVerification`
* `fetchUsAppToPerson`
* `fetchUsAppToPersonUsecase`
* `fetchUsecase`
* `listAlphaSender`
* `listBrandRegistrations`
* `listBrandVetting`
* `listPhoneNumber`
* `listService`
* `listShortCode`
* `listTollfreeVerification`
* `listUsAppToPerson`
* `updateBrandRegistrations`
* `updateDomainCertV4`
* `updateDomainConfig`
* `updateService`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
