SDKs/twilio.com/twilio_messaging_v1/1.40.0/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add https://gitpkg.now.sh/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_messaging_v1/1.40.0/typescript
```

### Yarn

```bash
yarn add https://gitpkg.now.sh/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_messaging_v1/1.40.0/typescript
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import {
  CreateAlphaSenderRequest,
  CreateAlphaSenderResponse
} from "openapi/dist/sdk/models/operations";

import { AxiosError } from "axios";
import { SDK } from "openapi";
const sdk = new SDK();

const req: CreateAlphaSenderRequest = {
  requestBody: {
    alphaSender: "corrupti",
  },
  serviceSid: "provident",
};

sdk.createAlphaSender(req).then((res: CreateAlphaSenderResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations

### SDK SDK

* `createAlphaSender`
* `createBrandRegistrations`
* `createBrandVetting`
* `createExternalCampaign`
* `createLinkshorteningMessagingService`
* `createPhoneNumber`
* `createService`
* `createShortCode`
* `createTollfreeVerification`
* `createUsAppToPerson`
* `deleteAlphaSender`
* `deleteDomainCertV4`
* `deleteLinkshorteningMessagingService`
* `deletePhoneNumber`
* `deleteService`
* `deleteShortCode`
* `deleteUsAppToPerson`
* `fetchAlphaSender`
* `fetchBrandRegistrations`
* `fetchBrandVetting`
* `fetchDeactivation` - Fetch a list of all United States numbers that have been deactivated on a specific date.
* `fetchDomainCertV4`
* `fetchDomainConfig`
* `fetchDomainConfigMessagingService`
* `fetchPhoneNumber`
* `fetchService`
* `fetchShortCode`
* `fetchTollfreeVerification`
* `fetchUsAppToPerson`
* `fetchUsAppToPersonUsecase`
* `fetchUsecase`
* `listAlphaSender`
* `listBrandRegistrations`
* `listBrandVetting`
* `listPhoneNumber`
* `listService`
* `listShortCode`
* `listTollfreeVerification`
* `listUsAppToPerson`
* `updateBrandRegistrations`
* `updateDomainCertV4`
* `updateDomainConfig`
* `updateService`
* `updateTollfreeVerification`
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)

